--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cloudinary": "^2.6.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
